Correction of Color Change and Font
Color was messed up, the problem has been fixed (I think)

--- a/Favorite Movie Project.html
+++ b/Favorite Movie Project.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 
 <html>
@@ -7,29 +8,30 @@
 
 
 <meta charset="utf-8">
-<title> MY FAVORITE MOVIE </title>
+<title style="color:grey"; font-family: "Courier New";> MY FAVORITE MOVIE </title>
 
 </head>
 
-<body>
+<body style="color:lightblue"; font-family: "Courier New";>
 
-<h1>"Star Wars Episode IV"</h1>
+
+<h1 style="color:grey"; font-family: "Courier New";>"Star Wars Episode IV"</h1>
 
 <img src="https://cdn.theatlantic.com/assets/media/img/mt/2016/01/solo/lead_large.jpg?1452549010" width="615" height="410" />
 
 
 <a href="http://www.imdb.com/title/tt0076759/"><p>Star Wars Episode IV</a></p> 
-<h2>Why I like this movie</h2>
+<h2 style="color:grey">Why I like this movie</h2>
 
-<p> This is one of, if not my most favorite movie. The first time I watched it countless years ago, it was remarkable, but what is so fantastic about this movie is that you can observe new details and get a more comprehensive image with each time you watch it.
+<p style=":grey"; font-family: "Courier New";> This is one of, if not my most favorite movie. The first time I watched it countless years ago, it was remarkable, but what is so fantastic about this movie is that you can observe new details and get a more comprehensive image with each time you watch it.
 For instance, I only recently discovered that the producer of "Episode IV: A New Hope", George Lucas, consulted a scholar named Joseph Campbell on how to produce the movie in accordance
 with The Hero's Journey, a set of common archetypes most movies with memorable characters follow. George Lucas executed this wonderfully throughout this episode and throughout the enitirity of the Original Trilogy.
 Because of this meticulous adherence to The Hero's Journey in the production of "Episode IV", this episode as well as nearly all the characters in it became highly memorable. </p>
 
 
-<h3>My Favorite Actor</h3>
+<h3 style="color:grey"; font-family: "Courier New";>My Favorite Actor</h3>
 
-<p> Harrison Ford, who plays Han Solo is undoubtedly my favorite actor in the whole film. I really like how dynamic his character is, not just in the entire Original Trilogy, but even only
+<p style="color:grey"; font-family: "Courier New";> Harrison Ford, who plays Han Solo is undoubtedly my favorite actor in the whole film. I really like how dynamic his character is, not just in the entire Original Trilogy, but even only
 in this episode. Overall, however, his character is extremely charismatic and his personality has a profound impression on the movie. </p>
 
 </body>
