Jeroo Page Addition - 10/13/16
In this edit, a Jeroo page was added

--- a/home.html
+++ b/home.html
@@ -1,11 +1,10 @@
-
 <!doctype html>
 
 <html>
 
 <head>
 	<meta charset="UTF-8">
-	<title> Div Tags Template </title>
+	<title> Scratch Page </title>
 	<link href="Example_main.css" rel="stylesheet"
 	type="text/css">
 </head>
@@ -53,7 +52,8 @@
 	</header><!-- End Header -->
 	
 	<!-- Section Content -->
-	<Section id="Content">
+	<Section id="Home Content">
+		<h3> Home Content </h3>
 		<p>Replace this particular text with a project and some assignment examples in the future </p>
 	</Section><!-- End Content (Replace this particular text with a project and some assignment examples in the future)-->
 
@@ -76,4 +76,3 @@
 </html>
 
 <!-- In the <a href> tag, inserting a "#" in the place of an acutal link will make the code act like a link despite not leading to any other location -->
-
