--- a/Jeroo.html
+++ b/Jeroo.html
@@ -1,6 +1,3 @@
-
-<!doctype html>
-
 <html>
 
 <head>
@@ -47,6 +44,7 @@
 				<li>
 					<a href="Jeroo.html">Jeroo</a>
 				</li>
+				
 			</ul>
 		</div> <!-- End Navigation Links -->
 		
@@ -54,12 +52,14 @@
 	
 	<!-- Section Content -->
 	<Section id="Content">
-		<p>Replace this particular text with a project and some assignment examples in the future </p>
+		<p>Put Jeroo content here </p>
 	</Section><!-- End Content (Replace this particular text with a project and some assignment examples in the future)-->
 
 	<!-- Aside Content -->
 	<Aside id="hobbies">
-		<p>	Insert items that reflect your interests with photos, links, videos,and other forms of multimedia</p>
+		<a href="Sourcefilejerooquiz.jsc">This link links to my Jeroo Page</a>
+		<a href="Forthequiz.jev">This link links to my Jeroo Island File</a>
+		<p> Put Jeroo content here <p>
 	</Aside> 
 	<!-- End Aside Content -->
 
@@ -76,4 +76,3 @@
 </html>
 
 <!-- In the <a href> tag, inserting a "#" in the place of an acutal link will make the code act like a link despite not leading to any other location -->
-
