--- a/final.html
+++ b/final.html
@@ -1,11 +1,10 @@
-
 <!doctype html>
 
 <html>
 
 <head>
 	<meta charset="UTF-8">
-	<title> Div Tags Template </title>
+	<title> Scratch Page </title>
 	<link href="Example_main.css" rel="stylesheet"
 	type="text/css">
 </head>
@@ -47,13 +46,15 @@
 				<li>
 					<a href="Jeroo.html">Jeroo</a>
 				</li>
+				
 			</ul>
 		</div> <!-- End Navigation Links -->
 		
 	</header><!-- End Header -->
 	
 	<!-- Section Content -->
-	<Section id="Content">
+	<Section id="Final Content">
+		<h3> Final Content </h3>
 		<p>Replace this particular text with a project and some assignment examples in the future </p>
 	</Section><!-- End Content (Replace this particular text with a project and some assignment examples in the future)-->
 
@@ -76,4 +77,3 @@
 </html>
 
 <!-- In the <a href> tag, inserting a "#" in the place of an acutal link will make the code act like a link despite not leading to any other location -->
-
