--- a/python.html
+++ b/python.html
@@ -1,11 +1,10 @@
-
 <!doctype html>
 
 <html>
 
 <head>
 	<meta charset="UTF-8">
-	<title> Div Tags Template </title>
+	<title> Python Page </title>
 	<link href="Example_main.css" rel="stylesheet"
 	type="text/css">
 </head>
@@ -47,19 +46,21 @@
 				<li>
 					<a href="Jeroo.html">Jeroo</a>
 				</li>
+				
 			</ul>
 		</div> <!-- End Navigation Links -->
 		
 	</header><!-- End Header -->
 	
 	<!-- Section Content -->
-	<Section id="Content">
+	<Section id="Python Content">
+		<h3> Python Content </h3>
 		<p>Replace this particular text with a project and some assignment examples in the future </p>
 	</Section><!-- End Content (Replace this particular text with a project and some assignment examples in the future)-->
 
 	<!-- Aside Content -->
 	<Aside id="hobbies">
-		<p>	Insert items that reflect your interests with photos, links, videos,and other forms of multimedia</p>
+		<p>Insert items that reflect your interests with photos, links, videos,and other forms of multimedia </p>
 	</Aside> 
 	<!-- End Aside Content -->
 
@@ -76,4 +77,3 @@
 </html>
 
 <!-- In the <a href> tag, inserting a "#" in the place of an acutal link will make the code act like a link despite not leading to any other location -->
-
