--- a/scratch.html
+++ b/scratch.html
@@ -53,7 +53,7 @@
 		
 					<h2> Name Assignment Project </h2>
 					<p>
-					 <img src="images/Name Project Screenshot.jpg"/ width="400" height="300">
+					 <img src="Images/Name Project Screenshot.jpg"/ width="400" height="300">
 					</p>
 					<h2>Description:</h2>
 					<p> The name assignment was a basic project on Scratch done in the first week of school, in which we had to program the individual letters of our name. 
@@ -74,7 +74,7 @@
 					
 				<h2> Computer Buying Project </h2>
 				<p>
-				<img src="images/Computer Buying Project Screenshot.jpg"/ width="400" height="300">
+				<img src="Images/Computer Buying Project Screenshot.jpg"/ width="400" height="300">
 				</p>
 				<h2> Description: </h2>
 				<p> The Computer Buying Project was a project where one had to create a presentation on Scratch in which 4 computer options were compared and then a winner would be determined based upon a set of computer criteria. 
@@ -95,7 +95,7 @@
 
 			 <h2> Final Project </h2>
 			<p>
-			<img src="images/Scratch Final Project (Escape from the Forest) Screenshot.jpg"/ width="400" height="300">
+			<img src="Images/Scratch Final Project (Escape from the Forest) Screenshot.jpg"/ width="400" height="300">
 			</p>
 			<h2> Description: </h2>
 			<p> In this final Scratch project, people were to work individually and opt to create either a game or a story, and I eventually selected the story option. 
@@ -205,7 +205,7 @@
 		
 					<h2> Name Assignment Project </h2>
 					<p>
-					 <img src="images/Name Project Screenshot.jpg"/ width="400" height="300">
+					 <img src="Images/Name Project Screenshot.jpg"/ width="400" height="300">
 					</p>
 					<h2>Description:</h2>
 					<p> The name assignment was a basic project on Scratch done in the first week of school, in which we had to program the individual letters of our name. 
@@ -226,7 +226,7 @@
 					
 				<h2> Computer Buying Project </h2>
 				<p>
-				<img src="images/Computer Buying Project Screenshot.jpg"/ width="400" height="300">
+				<img src="Images/Computer Buying Project Screenshot.jpg"/ width="400" height="300">
 				</p>
 				<h2> Description: </h2>
 				<p> The Computer Buying Project was a project where one had to create a presentation on Scratch in which 4 computer options were compared and then a winner would be determined based upon a set of computer criteria. 
@@ -247,7 +247,7 @@
 
 			 <h2> Final Project </h2>
 			<p>
-			<img src="images/Scratch Final Project (Escape from the Forest) Screenshot.jpg"/ width="400" height="300">
+			<img src="Images/Scratch Final Project (Escape from the Forest) Screenshot.jpg"/ width="400" height="300">
 			</p>
 			<h2> Description: </h2>
 			<p> In this final Scratch project, people were to work individually and opt to create either a game or a story, and I eventually selected the story option. 
