--- a/java.html
+++ b/java.html
@@ -51,8 +51,25 @@
 	<!-- Section Content -->
 	<Section id="Java Content">
 		<h3> Java Content </h3>
-		<p>Replace this particular text with a project and some assignment examples in the future </p>
+		<h2>Text Based Decision Tree</h2>
+					<p>
+					 <img src="Images/JavaPage.jpg"/ width="400" height="300">
+					</p>
+					
+					<h2>Description:</h2>
+					<p>In this particular assignment, the creator was tasked with creating an archetypal text-based decision tree, in which the 
+					favorability of any particular outcome is determined by the input the user inserts when provided with a choice. 
+					Though difficult to create due to the inherent nature of switching to a separate format of coding within only about a week, 
+					the project managed to contain the requisite amount of sets of choices, that being 4, and extensively integrated variables.	</p>
+					<h2> Concepts Learned </h2>
+					<ul>
+						<li>The indication that indicates which open brace corresponds to which closed brace </li>
+						<li>Creation of variables within Java </li>
+						<li>Re-accustoming oneself to bracket-based code (as opposed to indentation-based code) </li>
+						<li>Receiving user input in Java</li>
+					</ul>
 	</Section><!-- End Content (Replace this particular text with a project and some assignment examples in the future)-->
+	
 
 	<!-- Aside Content -->
 	<Aside id="hobbies">
@@ -133,7 +150,7 @@
 		<h1>Java Unit 1 </h1>
 	<h2>Text Based Decision Tree</h2>
 					<p>
-					 <img src="images/JavaPage.jpg"/ width="400" height="300">
+					 <img src="Images/JavaPage.jpg"/ width="400" height="300">
 					</p>
 					
 					<h2>Description:</h2>
