--- a/final.html
+++ b/final.html
@@ -51,7 +51,7 @@
 	<!-- Section Content -->
 	<h1>Final Project</h1>
 		<h2>The Seal With a Horrific Degree of Amnesia</h2>
-		<p> <img src="images/FinalProject.jpg"/ width="400" height="300"> </p>
+		<p> <img src="Images/FinalProject.jpg"/ width="400" height="300"> </p>
 		<h2> Description </h2>
 		<p>In this final project, the player was to specify their color and name of a particular seal, 
 		which would be manipulatable through the “a” and “d” keys. Then, the player was to play 2 rounds,
